# zero2prodPractice

./: Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: general.yml  rust.yml
configuration/: base.yaml  configuration_base.yaml  configuration_local.yaml  configuration_production.yaml  local.yaml
migrations/: 20220316003852_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
