[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.21"
serde = "1.0.135"
tokio = {version = "1.15.0", features = ["macros", "rt-multi-thread"]}
config = "0.11.0"
uuid = {version="0.8.2", features = ["v4"]}
chrono = "0.4.19"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11.9"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
      "chrono", 
    "migrate"
]
