[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1", features = ["derive"]}
config = "0.13"
uuid = {version = "1.3.3", features = ["serde", "v4"]}
chrono = {version = "0.4.26", features = ["clock"], default-features = false}
env_logger = "0.10.0"
[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono","migrate"]

[dev-dependencies]
reqwest = "0.11.4"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"