[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.164", features = ["derive"]}
config = "0.13.3"
uuid = {version = "1.3.3", features = ["serde", "v4"]}
chrono = {version = "0.4.26", features = ["clock"], default-features = false}
log = "0.4.19"
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = {version="0.3.17", features=["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
once_cell = "1.8.0"
[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono","migrate"]

[dev-dependencies]
reqwest = "0.11.18"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"